package com.novaperutech.veyra.platform.analytics.domain.model.queries;

public record GetGeneralAnalyticsQuery(Long nursingHomeId) {

}
