package com.novaperutech.veyra.platform.analytics.domain.model.queries;

public record GetInventoryAnalyticsQuery(Long nursingHomeId) {

}
