package com.novaperutech.veyra.platform.analytics.domain.model.valueobjects;

public record TopMedicationUsage(Long medicationId, String name, long uses) {}
