package com.novaperutech.veyra.platform.analytics.interfaces.rest.resources;

public record TopMedicationUsageResource(Long medicationId,String name,long uses) {}
