@startuml
title Analytics Bounded Context
top to bottom direction
skinparam packageStyle Rectangle
skinparam linetype ortho
skinparam classAttributeIconSize 0
scale 1300 height

package "analytics" {

  ' ========== DOMAIN ==========
  package "domain" {

    package "services" {
      interface AnalyticsQueryServices {
        + handle(GetGeneralAnalyticsQuery): GeneralStats
        + handle(GetInventoryAnalyticsQuery): InventoryStats
        + handle(GetResidentStatisticsQuery): ResidentStats
        + handle(GetTopMedicationUsageQuery): List<TopMedicationUsage>
      }
    }

    package "model" {

      package "queries" {
        class GetGeneralAnalyticsQuery
        class GetInventoryAnalyticsQuery
        class GetResidentStatisticsQuery
        class GetTopMedicationUsageQuery {
          + limit: Integer
        }
      }

      package "valueobjects" {
        class GeneralStats <<VO>> {
          + totalResidents: Integer
          + occupiedBeds: Integer
          + availableBeds: Integer
        }
        class InventoryStats <<VO>> {
          + totalItems: Integer
          + lowStockItems: Integer
          + expiringSoonItems: Integer
        }
        class ResidentStats <<VO>> {
          + averageAge: Double
          + maleCount: Integer
          + femaleCount: Integer
        }
        class TopMedicationUsage <<VO>> {
          + medicationName: String
          + usageCount: Integer
        }
      }
    }
  }

  ' ========== APPLICATION ==========
  package "application.internal" {
    package "queryservices" {
      class AnalyticsQueryServiceImpl {
        - analyticsReadRepository: AnalyticsReadRepository
        + handle(GetGeneralAnalyticsQuery): GeneralStats
        + handle(GetInventoryAnalyticsQuery): InventoryStats
        + handle(GetResidentStatisticsQuery): ResidentStats
        + handle(GetTopMedicationUsageQuery): List<TopMedicationUsage>
      }
    }
    package "outboundservices.acl" {
      ' (si luego usas otras BCs para componer KPIs, agrégalas aquí)
    }
  }

  ' ========== INFRASTRUCTURE ==========
  package "infrastructure.persistence.jpa.repositories" {
    interface AnalyticsReadRepository {
      + fetchGeneralStats(): GeneralStats
      + fetchInventoryStats(): InventoryStats
      + fetchResidentStats(): ResidentStats
      + fetchTopMedicationUsage(limit: Integer): List<TopMedicationUsage>
    }
  }

  ' ========== INTERFACES/REST ==========
  package "interfaces.rest" {

    package "resources" {
      class GeneralStatsResource <<DTO>> {
        + totalResidents: Integer
        + occupiedBeds: Integer
        + availableBeds: Integer
      }
      class InventoryStatsResource <<DTO>> {
        + totalItems: Integer
        + lowStockItems: Integer
        + expiringSoonItems: Integer
      }
      class ResidentStatsResource <<DTO>> {
        + averageAge: Double
        + maleCount: Integer
        + femaleCount: Integer
      }
      class TopMedicationUsageResource <<DTO>> {
        + medicationName: String
        + usageCount: Integer
      }
    }

    package "transform" {
      class AnalyticsResourceAssembler {
        + toResource(vo: GeneralStats): GeneralStatsResource {static}
        + toResource(vo: InventoryStats): InventoryStatsResource {static}
        + toResource(vo: ResidentStats): ResidentStatsResource {static}
        + toResourceList(vo: List<TopMedicationUsage>): List<TopMedicationUsageResource> {static}
      }
    }

    class AnalyticsController {
      - analyticsQueryServices: AnalyticsQueryServices
      + getGeneralAnalytics(): ResponseEntity<GeneralStatsResource>
      + getInventoryAnalytics(): ResponseEntity<InventoryStatsResource>
      + getResidentStatistics(): ResponseEntity<ResidentStatsResource>
      + getTopMedicationUsage(limit: Integer): ResponseEntity<List<TopMedicationUsageResource>>
    }
  }
}

' ===== Implementación & dependencias =====
AnalyticsQueryServiceImpl ..|> AnalyticsQueryServices
AnalyticsQueryServiceImpl --> AnalyticsReadRepository

AnalyticsController --> AnalyticsQueryServices
AnalyticsController ..> AnalyticsResourceAssembler : uses

' ===== Mapeos VO -> Resource (no líneas de composición para simplificar)
@enduml
